<resources>
    <string name="app_name">Ежедневник</string>

    <string name="title_calendar">Календарь</string>
    <string name="title_notes">События</string>
    <string name="title_new_note">Новое событие</string>

    <string name="new_note">Новое событие</string>
    <string name="note">Событие</string>
    <string name="notes_list">Список событий</string>
    <string name="start">Начало:</string>
    <string name="finish">Окончание:</string>
    <string name="note_name">Название события</string>
    <string name="note_description">Описание события</string>
    <string name="add_note">Добавить событие</string>
    <string name="change_note">Изменить событие</string>
    <string name="delete_note">Удалить событие</string>

    <string name="enter_note_name">Введите название события</string>
    <string name="note_deleted">Событие удалено</string>
    <string name="note_changed">Событие изменено</string>
    <string name="note_created">Событие создано</string>

    <string name="material_calendar_monday">Пн</string>
    <string name="material_calendar_tuesday">Вт</string>
    <string name="material_calendar_wednesday">Ср</string>
    <string name="material_calendar_thursday">Чт</string>
    <string name="material_calendar_friday">Пт</string>
    <string name="material_calendar_saturday">Сб</string>
    <string name="material_calendar_sunday">Вс</string>

    <array name="material_calendar_months_array">
        <item>Январь</item>
        <item>Февраль</item>
        <item>Март</item>
        <item>Апрель</item>
        <item>Май</item>
        <item>Июнь</item>
        <item>Июль</item>
        <item>Август</item>
        <item>Сентябрь</item>
        <item>Октябрь</item>
        <item>Ноябрь</item>
        <item>Декабрь</item>
    </array>

    <string name="material_calendar_today_button">Сегодня</string>
    <string name="material_calendar_positive_button">ОК</string>
    <string name="material_calendar_negative_button">Отмена</string>

</resources>