<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="@color/background_color">

    <TextView
        android:id="@+id/tittle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/note"
        android:textSize="25sp"
        android:textStyle="bold"
        android:textColor="@color/black"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewStart"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        app:cardBackgroundColor="@color/new_note_color"
        app:cardCornerRadius="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tittle"
        app:layout_constraintEnd_toStartOf="@+id/cardViewFinish"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/start"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/start"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/dateStart"
                app:layout_constraintTop_toBottomOf="@+id/tittle"/>

            <Button
                android:id="@+id/dateStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_color"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="02.11.2021"/>

            <Button
                android:id="@+id/timeStart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/background_color"
                android:textColor="@color/black"
                android:textSize="16sp"
                tools:text="10:15"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewFinish"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@+id/cardViewStart"
        app:layout_constraintStart_toEndOf="@id/cardViewStart"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/new_note_color"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical"
            android:padding="8dp">

            <TextView
                android:id="@+id/finish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/finish"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/tittle"
                app:layout_constraintStart_toStartOf="@+id/dateStart"/>

            <Button
                android:id="@+id/dateFinish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:backgroundTint="@color/background_color"
                tools:text="02.11.2021"/>

            <Button
                android:id="@+id/timeFinish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:backgroundTint="@color/background_color"
                tools:text="10:30"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewText"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:layout_constraintTop_toBottomOf="@+id/cardViewStart"
        app:layout_constraintBottom_toTopOf="@+id/changeNoteButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:cardBackgroundColor="@color/new_note_color"
        app:cardCornerRadius="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="4dp">

            <EditText
                android:id="@+id/noteName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/note_name"
                android:inputType="textPersonName"
                android:textSize="16sp"
                tools:text="Полить цветы"/>

            <EditText
                android:id="@+id/noteDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="top"
                android:hint="@string/note_description"
                android:inputType="textMultiLine"
                android:textSize="16sp"
                app:layout_constraintTop_toBottomOf="@+id/task"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                tools:text="@tools:sample/lorem/random"/>

        </LinearLayout>

    </androidx.cardview.widget.CardView>

    <Button
        android:id="@+id/changeNoteButton"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:backgroundTint="@color/dark_red"
        android:text="@string/change_note"
        android:textAllCaps="false"
        app:layout_constraintTop_toBottomOf="@+id/cardViewText"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/deleteNoteButton"
        app:layout_constraintHorizontal_bias="0.0"/>

    <Button
        android:id="@+id/deleteNoteButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/dark_red"
        android:text="@string/delete_note"
        android:textAllCaps="false"
        app:layout_constraintTop_toTopOf="@+id/changeNoteButton"
        app:layout_constraintBottom_toBottomOf="@+id/changeNoteButton"
        app:layout_constraintStart_toEndOf="@id/changeNoteButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"/>

</androidx.constraintlayout.widget.ConstraintLayout>
